--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,8 @@
 
 html {
   scroll-behavior: smooth;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
